Attribution des cartes Personnages
PDV initialisés, pas encore remis automatiquement si PV = 0

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "files.associations": {
         "*.embeddedhtml": "html",
         "libraries.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "stdlib.h": "c"
     }
 }
